crates/iroha_schema_derive/tests/ui_fail/transparent_struct_multiple_fields.rs
use iroha_schema::IntoSchema;

#[derive(IntoSchema)]
#[schema(transparent)]
struct Wrapper {
    first: u32,
    second: u32,
}

fn main() {}
